<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.car2go.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.car2go.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rentCar"
        android:name="com.example.car2go.ui.rentCar.RentCarFragment"
        android:label="Rent Car"
        tools:layout="@layout/fragment_rent_car" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.car2go.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.car2go.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.car2go.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_services" />
</navigation>