<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AdminFragment">

    <Button
        android:id="@+id/add_new_car_btn"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/allerta"
        android:text="@string/anc_btn_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/existingcars_btn"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/allerta"
        android:text="@string/ec_txt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_car_btn"
        tools:text="@string/ec_txt" />

    <Button
        android:id="@+id/history_btn"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/allerta"
        android:text="@string/history_txt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pendingcars_btn" />

    <Button
        android:id="@+id/pendingcars_btn"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/allerta"
        android:text="@string/pc_txt"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/existingcars_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>