<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:context=".ui.admin.AddNewCar">

        <ImageView
            android:id="@+id/sample_img"
            android:layout_width="230dp"
            android:layout_height="223dp"
            android:layout_marginTop="-5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_img_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sample_img"
            app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

        <EditText
            android:id="@+id/car_name_hint"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="36dp"
            android:background="@color/text_input_bg_colour"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/car_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sample_img" />

        <EditText
            android:id="@+id/distance_hint"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_input_bg_colour"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp"
            android:text="@string/distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_name_hint" />

        <EditText
            android:id="@+id/insurance_hint"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_input_bg_colour"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/insurance_and_protection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distance_hint" />

        <EditText
            android:id="@+id/description_hint"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/text_input_bg_colour"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insurance_hint" />

        <Button
            android:id="@+id/anc_edit_btn"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/btn_blue"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.378"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_hint"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/anc_dlt_btn"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:background="@color/btn_blue"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_hint"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/anc_save_btn"
            android:layout_width="115dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@color/btn_blue"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anc_dlt_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
